--- a/style.css
+++ b/style.css
@@ -15,16 +15,23 @@ header {
   position: absolute;
   z-index: -99;
   width: 100%;
-  height: 80vh;
-  top: 20vh;
+  height: 100vh;
+}
+
+.video-container iframe {
+  opacity: 0.7;
 }
 
 .image-container {
+  position: absolute;
   z-index: 99;
   height: 50vh;
   width: auto;
   text-align: center;
-  margin-top: -15vh;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .image-container img {
