--- a/style.css
+++ b/style.css
@@ -75,16 +75,18 @@ html {
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
 .links div {
   flex-grow: 1;
-  width: 33%;
-  height: 100px;
+  width: 20%;
+  height: 70px;
 }
 
 .links img {
-  width: 40%;
+  width: 50%;
 }
 
 .scroll a {
@@ -170,6 +172,11 @@ html {
   .image-container {
     width: 100%;
     height: 70%;
+    top: -5%;
+  }
+
+  .image-container img {
+    filter: invert(1);
   }
 
   #info h1 {
