--- a/style.css
+++ b/style.css
@@ -1,253 +1,100 @@
-html {
-  scroll-behavior: smooth;
-  font-family: "Montserrat", sans-serif;
+/* general styling */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-.section {
-  min-height: 100vh;
-  text-align: center;
-  vertical-align: baseline;
-  background-color: #343434;
+html, body {
+  height: 100%;
+  margin: 0;
 }
 
-.fullscreen {
-  min-height: 100vh;
-  text-align: center;
-  width: 100%;
-  border-bottom: 1px solid black;
-  padding-top: 5%;
-  padding-bottom: 5%;
-}
-
-#bio {
-  position: absolute;
-  top: 100vh;
-}
-
-#merch {
-  position: absolute;
-  top: 200vh;
-}
-
-#gallery {
-  position: absolute;
-  top: 300vh;
-}
-
-#contact {
-  position: absolute;
-  top: 400vh;
-}
-
-.video-container {
-  position: absolute;
-  z-index: -99;
-  width: 100%;
-  height: 100vh;
-}
-
-.video-container iframe {
-  opacity: 0.7;
-}
-
-.image-container {
-  position: absolute;
-  z-index: 99;
-  height: 90%;
-  width: auto;
-  text-align: center;
-  left: 0;
-  right: 0;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.image-container img {
-  width: inherit;
-  height: inherit;
-}
-
-.image-icon {
-  height: 40vh;
-  width: auto;
-  text-align: center;
-  top: 0;
-  margin-bottom: -5%;
-  z-index: -99;
-}
-
-.image-icon img {
-  width: inherit;
-  height: inherit;
-}
-
-#info {
-  width: 50%;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-  justify-content: center;
-  margin-bottom: 5%;
-}
-
-#info h1 {
-  padding-bottom: 1rem;
-}
-
-.links {
-  display: flex;
-  flex-wrap: wrap;
+body {
   align-items: center;
   justify-content: center;
-  margin-left: 15%;
-  margin-right: 15%;
+  background-color: #000000;
+  display: flex;
+  font-family: -apple-system, 
+    BlinkMacSystemFont, 
+    "Segoe UI", 
+    Roboto, 
+    Oxygen-Sans, 
+    Ubuntu, 
+    Cantarell, 
+    "Helvetica Neue", 
+    sans-serif;
 }
 
-.links div {
-  flex-grow: 1;
-  width: 20%;
-  height: 70px;
-}
-
-.links img {
-  width: 35%;
-}
-
-.scroll a {
-  position: absolute;
+.container {
+  color: rgb(255, 255, 255);
+  margin: 0 auto;
   text-align: center;
-  bottom: 20px;
-  left: 0;
-  right: 0;
-  margin-left: auto;
-  margin-right: auto;
-  z-index: 2;
+  align-items: baseline;
+}
+
+h1 {
+  font-weight: normal;
+  letter-spacing: .125rem;
+  text-transform: uppercase;
+  margin-top: 2rem;
+}
+
+li {
   display: inline-block;
-  -webkit-transform: translate(0, -50%);
-  transform: translate(0, -50%);
-  color: #fff;
-  font: normal 400 20px/1 "Josefin Sans", sans-serif;
-  letter-spacing: 0.1em;
-  text-decoration: none;
-  transition: opacity 0.3s;
-}
-.scroll a:hover {
-  opacity: 0.5;
+  font-size: 1.5em;
+  list-style-type: none;
+  padding: 1em;
+  text-transform: uppercase;
 }
 
-#scrollSection a {
-  padding-top: 80px;
+li span {
+  display: block;
+  font-size: 4.5rem;
 }
 
-#scrollSection a span {
-  position: absolute;
-  top: 0;
-  left: 50%;
-  width: 24px;
-  height: 24px;
-  margin-left: -12px;
-  border-left: 1px solid #fff;
-  border-bottom: 1px solid #fff;
-  -webkit-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-  -webkit-animation: sdb07 2s infinite;
-  animation: sdb07 2s infinite;
-  opacity: 0;
-  box-sizing: border-box;
-}
-#scrollSection a span:nth-of-type(1) {
-  -webkit-animation-delay: 0s;
-  animation-delay: 0s;
-}
-#scrollSection a span:nth-of-type(2) {
-  top: 16px;
-  -webkit-animation-delay: 0.15s;
-  animation-delay: 0.15s;
-}
-#scrollSection a span:nth-of-type(3) {
-  top: 32px;
-  -webkit-animation-delay: 0.3s;
-  animation-delay: 0.3s;
+.message {
+  font-size: 4rem;
 }
 
-/* Add a black background color to the top navigation */
-.nav {
-  overflow: hidden;
-  margin-top: -5%;
-  justify-content: center;
-}
-
-/* Style the links inside the navigation bar */
-.nav a {
-  display: inline-block;
-  color: black;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 1.6rem;
-}
-
-/* Hide the link that should open and close the topnav on small screens */
-.nav .icon {
+#content {
   display: none;
+  padding: 1rem;
 }
 
-@-webkit-keyframes sdb07 {
-  0% {
-    opacity: 0;
-  }
-  50% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-@keyframes sdb07 {
-  0% {
-    opacity: 0;
-  }
-  50% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
+.emoji {
+  padding: 0 .25rem;
 }
 
-@media screen and (max-width: 992px) {
-  .image-container {
-    width: 100%;
-    height: 70%;
-    top: -5%;
-  }
+.logo {
+  height: 50vh;
+  width: auto;
+  text-align: center;
+  margin-top: -30%;
+  margin-bottom: -20%;
+}
 
-  .image-container img {
-    filter: invert(1);
-  }
+.logo img{
+  width: inherit;
+  height: inherit;
+  filter: invert(1)
+}
 
-  #info {
-    width: 80%;
-    margin-bottom: 5%;
-    margin-top: 10%;
+@media all and (max-width: 768px) {
+  .logo {
+    margin-top: -90%;
   }
-
-  .image-icon {
-    display: none;
+  
+  h1 {
+    font-size: 1.5rem;
   }
-
-  #info h1 {
-    text-align: center;
-    padding-bottom: 1rem;
+  
+  li {
+    font-size: 1.125rem;
+    padding: .75rem;
   }
-
-  .nav.responsive {
-    position: relative;
-    margin-bottom: -5%;
-  }
-
-  .nav.responsive a {
-    float: none;
-    display: inline-block;
+  
+  li span {
+    font-size: 3.375rem;
   }
 }
