change timer format

--- a/style.css
+++ b/style.css
@@ -117,11 +117,11 @@ li span {
   }
   
   .container {
-    margin-top: -20%;
+    margin-top: -35%;
   }
 
   .logo {
-    margin-top: -60%;
+    margin-top: -30%;
   }
   
   h1 {
@@ -129,8 +129,8 @@ li span {
   }
   
   li {
-    font-size: 1.125rem;
-    padding: .75rem;
+    font-size: 1.1rem;
+    padding: 1.8rem;
   }
   
   li span {
